--- a/src/components/landing/Banner.astro
+++ b/src/components/landing/Banner.astro
@@ -11,15 +11,25 @@
             </div>
             <div
               class="flex items-center animate-marquee font-black font-display gap-4 relative tracking-widest uppercase whitespace-nowrap">
-              spots open <span class="hidden lg:inline">✺</span>spots open <span
+              
+              storytelling <span class="hidden lg:inline">✺</span>
+              content strategy <span
                 class="hidden lg:inline">✺</span
-              > spots open <span class="hidden lg:inline">✺</span> spots open <span
+              > 
+              multimedia production  <span class="hidden lg:inline">✺</span> 
+              Visual Design <span
                 class="hidden lg:inline">✺</span
-              >spots open <span class="hidden lg:inline">✺</span> spots open <span
+              >
+              Full-Stack Development <span class="hidden lg:inline">✺</span> 
+              Database Management <span
                 class="hidden lg:inline">✺</span
-              > spots open <span class="hidden lg:inline">✺</span>spots open <span
+              > 
+              Technical writing <span class="hidden lg:inline">✺</span>
+              Project management <span
                 class="hidden lg:inline">✺</span
-              > spots open <span class="hidden lg:inline">✺</span> spots open
+              > 
+              Collaboration  
+              
             </div>
           </div>
         </div>
