--- a/src/components/landing/Testimonials.astro
+++ b/src/components/landing/Testimonials.astro
@@ -2,10 +2,7 @@
   class="text-white text-xs gap-3 gap-y-12 grid grid-cols-1 md:grid-cols-4 mx-auto p-8 sm:grid-cols-2">
   <div class="flex flex-col justify-between h-full">
     <p class="text-[#ed642c]">
-      John seamlessly merges design and coding, creating polished designs that
-      strike a perfect balance between trends and originality. His approach of
-      crafting designs directly in code yields exceptional results, surpassing
-      expectations.
+      Dean is a considerate, thoughtful, and motivated engineer who possesses some of the best people skills a team could ask for. In our work together, Dean was constantly keeping our team on task, resourcefully organizing our knowledge-base, and all the while inspiring a positive and productive team-spirit. 
     </p>
     <div class="mt-3">
       <span class="block font-semibold mt-3">Emily Reynolds</span>
