--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -1,20 +1,25 @@
+
+<!-- Project CTA -->
 <section class="border-b border-white/20  bg-accent-500">
   <div class="mx-auto max-w-7xl border-x border-white/20  px-8 py-12 gradient-grid">
     <div class="mx-auto">
       <h3 class="text-3xl font-display text-white uppercase">
-        Designed and developed websites at AstroMax
+        Click on the work below to take a closer look. 
       </h3>
     </div>
   </div>
 </section>
+
+<!-- Project Gallery -->
 <section class="border-b border-white/20  bg-accent-500">
   <div
     class="mx-auto max-w-7xl border-white/20  border-x"
     x-data="{ init() {
             new Splide(this.$refs.splide, {
 
-                perPage: 5,
+                perPage: 4,
                 gap: '0rem',
+                arrows: false,
                 breakpoints: {
                     640: {
                         perPage: 1,
@@ -30,41 +35,7 @@
       x-ref="splide"
       id="splide01"
       aria-roledescription="carousel">
-      <div class="splide__arrows splide__arrows--ltr items-center">
-        <button
-          class="splide__arrow splide__arrow--prev"
-          type="button"
-          aria-label="Previous slide"
-          aria-controls="splide01-track"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 40 40"
-            width="40"
-            height="40"
-            focusable="false"
-            ><path
-              d="m15.5 0.932-4.3 4.38 14.5 14.6-14.5 14.5 4.3 4.4 14.6-14.6 4.4-4.3-4.4-4.4-14.6-14.6z"
-            ></path></svg
-          ></button
-        >
-        <button
-          class="splide__arrow splide__arrow--next"
-          type="button"
-          disabled=""
-          aria-label="Next slide"
-          aria-controls="splide01-track"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 40 40"
-            width="40"
-            height="40"
-            focusable="false"
-            ><path
-              d="m15.5 0.932-4.3 4.38 14.5 14.6-14.5 14.5 4.3 4.4 14.6-14.6 4.4-4.3-4.4-4.4-14.6-14.6z"
-            ></path></svg
-          ></button
-        >
-      </div>
+      
       <div
         class="h-full splide__track splide__track--slide splide__track--ltr splide__track--draggable"
         id="splide01-track"
@@ -85,11 +56,13 @@
             aria-label="3 of 4"
             style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
             aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/1.png"
-            />
+            <a href="https://www.query-iq.com/" target="_blank">
+              <img
+                alt="work"
+                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
+                src="/work/1.png"
+              />
+            </a>
             <div
               class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
               <span class="block font-semibold">Project 1</span>
@@ -150,115 +123,11 @@
             </div>
           </li>
 
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide02"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="2 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black"
-              src="/work/5.png"
-            />
-            <div
-              class="text-white text-xs order-first p-3 text-center lg:border-black">
-              <span class="block font-semibold">Project 5</span>
-            </div>
-          </li>
+          
 
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide02"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="2 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/6.png"
-            />
-            <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 6</span>
-            </div>
-          </li>
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide02"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="2 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/7.png"
-            />
-            <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 7</span>
-            </div>
-          </li>
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide02"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="2 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/8.png"
-            />
-            <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 8</span>
-            </div>
-          </li>
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide02"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="2 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/9.png"
-            />
-            <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 9</span>
-            </div>
-          </li>
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide02"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="2 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black"
-              src="/work/10.png"
-            />
-            <div
-              class="text-white text-xs order-first p-3 text-center lg:border-black">
-              <span class="block font-semibold">Project 10</span>
-            </div>
-          </li>
+          
+
+          
         </ul>
       </div>
     </section>
