--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -48,6 +48,7 @@
           id="splide01-list"
           role="presentation"
           style="transform: translateX(-2040px);">
+          <a href="https://www.query-iq.com/" target="_blank">
           <li
             class="flex justify-center flex-col splide__slide is-prev"
             id="splide01-slide03"
@@ -56,18 +57,24 @@
             aria-label="3 of 4"
             style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
             aria-hidden="true">
-            <a href="https://www.query-iq.com/" target="_blank">
+            
               <img
                 alt="work"
                 class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
                 src="/work/1.png"
               />
-            </a>
+            
             <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 1</span>
+              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-semibold">Query IQ</span>
+            </div>
+            <div
+              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-regular">Database Health Monitoring</span>
             </div>
           </li>
+          </a>
+          <a href="https://www.youtube.com/@Codesmith/shorts" target="_blank">
           <li
             class="flex justify-center flex-col splide__slide"
             id="splide01-slide01"
@@ -82,10 +89,16 @@
               src="/work/2.png"
             />
             <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 2</span>
+              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-semibold">Codesmith</span>
+            </div>
+            <div
+              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-regular">Technical Video Content</span>
             </div>
           </li>
+          </a>
+          <a href="https://medium.com/@deanbiscocho" target="_blank">
           <li
             class="flex justify-center flex-col splide__slide is-prev"
             id="splide01-slide03"
@@ -100,10 +113,16 @@
               src="/work/3.png"
             />
             <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 3</span>
+              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-semibold">Medium</span>
+            </div>
+            <div
+              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-regular">Technical Writing Content</span>
             </div>
           </li>
+          </a>
+          <a href="https://vaynercommerce.com/" target="_blank">
           <li
             class="flex justify-center flex-col splide__slide is-prev"
             id="splide01-slide03"
@@ -118,10 +137,15 @@
               src="/work/4.png"
             />
             <div
-              class="text-white text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Project 4</span>
+              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-semibold">VaynerCommerce</span>
+            </div>
+            <div
+              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
+              <span class="block font-regular">Content Strategy and Paid Media</span>
             </div>
           </li>
+          </a>
 
           
 
