--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -5,19 +5,24 @@
       class="mx-auto border-white/20  border-x max-w-7xl flex flex-col lg:flex-row lg:items-center lg:justify-between w-full">
       <div
         class="text-white text-center items-center w-full flex flex-col justify-between md:px-0 sm:flex-row sm:px-8">
+        <span
+          class="text-white text-xs font-display inline-flex items-center md:px-8 md:text-center py-4 uppercase">Welcome to my site  </span>
+        
         <a
-          href="https://www.lexingtonthemes.com"
-          class="text-white text-xs font-display inline-flex items-center md:px-8 md:text-center py-4 uppercase"
-          ><span>ASTROMAX ⏤ By Lexington Themes &nbsp; &rarr;</span>
-        </a>
-        <a
-          href="https://github.com/michael-andreuzza/astromax"
+          href="https://github.com/deanbiscocho"
+          target="_blank"
+          class="w-full bg-white duration-200 font-display hover:bg-black hover:text-white lg:ml-auto lg:w-auto px-6 py-4 sm:rounded-full text-black text-center text-xs uppercase"
+          >Linkedin</a
+        ><a
+          href="https://github.com/deanbiscocho"
+          target="_blank"
           class="w-full bg-white duration-200 font-display hover:bg-black hover:text-white lg:ml-auto lg:w-auto px-6 py-4 sm:rounded-full text-black text-center text-xs uppercase"
           >Github</a
         ><a
-          href="mailto:your@name.com"
+          href="mailto:deanbiscocho@gmail.com"
+          target="_blank"
           class="w-full bg-carrot duration-200 font-display hover:bg-blacktext-white lg:w-auto px-6 py-4 sm:rounded-full text-black hover:text-white text-center text-xs uppercase"
-          >Get a quote</a
+          >Send me an email</a
         >
       </div>
     </div>
