--- a/src/components/landing/Intro.astro
+++ b/src/components/landing/Intro.astro
@@ -2,18 +2,16 @@
   <div class="mx-auto border-white/20  border-x max-w-7xl gradient-grid">
     <div class="mx-auto max-w-7xl p-8">
       <p class="text-white font-display uppercase lg:text-6xl text-xl">
-        AstroMax is a comprehensive design, redesign, and development service
-        that specializes in crafting exceptional one-page websites to captivate
-        users and leave a lasting impression.
+        Energetic contributor to the open-source community with a love for content creation.
       </p>
     </div>
     <div class="mx-auto max-w-7xl p-8">
       <p class="text-white font-display uppercase lg:text-3xl">
-        I specialize in developing static websites using Astro and Tailwind CSS.
-        By leveraging these frameworks, I create tailored and optimized websites
-        that effectively share startup stories, connect with audiences, and
-        create memorable experiences. Let me help you achieve your goals with a
-        remarkable online presence.
+        As a developer and content creator with a focus on technical writing, I excel in crafting and disseminating information for tech-savvy communities. 
+        <br>
+        <br>
+        Using a blend of programming expertise and narrative skills, I design and develop websites that not only showcase the unique journey of tech startups but also engage effectively with a targeted audience. 
+        
       </p>
     </div>
   </div>
