--- a/src/components/landing/Services.astro
+++ b/src/components/landing/Services.astro
@@ -2,7 +2,7 @@
   <div class="mx-auto border-white/20  border-x max-w-7xl">
     <div class="p-8">
       <p class="text-white font-display uppercase text-3xl lg:text-6xl">
-        our services; Explained
+        My services; Explained
       </p>
     </div>
     <div
@@ -10,55 +10,41 @@
       <div>
         <div>
           <span class="text-white font-display text-xl"
-            >Design in Figma or Browser:</span
+            >Custom Development:</span
           >
         </div>
         <p class="mt-3 text-eagle">
-          I offer professional design services using Figma or I can work
-          directly in the browser. As a skilled designer, I will create visually
-          appealing and user-friendly designs specifically tailored to your
-          needs and requirements.
+          Specializing in bespoke software solutions, I transform your unique ideas into functional and innovative applications, ensuring they align perfectly with your business needs and technological aspirations.
         </p>
       </div>
       <div>
         <div>
           <span class="text-white font-display text-xl"
-            >Redesign of Existing Projects:</span
+            >Content Strategy & Technical Writing:</span
           >
         </div>
         <p class="mt-3 text-eagle">
-          If you have an existing project that needs a fresh look or improved
-          functionality, I can offer my assistance. I will personally analyze
-          your current design and make strategic enhancements to transform it
-          into a modern and captivating website.
+          Leveraging my expertise in technical communication, I develop clear, impactful content strategies and write authoritative technical documents that effectively convey complex information to your target audience.
         </p>
       </div>
       <div>
         <div>
           <span class="text-white font-display text-xl"
-            >Convert to Tailwind CSS and Astro:</span
+            >Consultation & Strategy Planning:</span
           >
         </div>
         <p class="mt-3 text-eagle">
-          By converting your project, you can expect faster load times and
-          improved user experiences. Let me assist you in enhancing your
-          existing project, making it more efficient and user-friendly.
-          Together, we can leverage the power of Tailwind CSS and Astro to bring
-          your project to new heights.
+          Offering expert consultation, I guide startups and tech companies through strategic planning, helping them navigate the tech landscape to achieve optimal growth and success.
         </p>
       </div>
       <div>
         <div>
           <span class="text-white font-display text-xl"
-            >Development with Tailwind &amp; Astro:</span
+            >User Experience Design:</span
           >
         </div>
         <p class="mt-3 text-eagle">
-          I specialize in web development using Tailwind CSS and Astro. I can
-          create visually appealing, functional, and customized websites that
-          align with your brand and meet your business goals. With my expertise,
-          your online presence will be compelling and tailored to your specific
-          needs.
+          Focused on creating intuitive and engaging digital experiences, I design user interfaces that are not only visually appealing but also user-friendly, enhancing overall customer satisfaction and interaction with your product.
         </p>
       </div>
     </div>
