added new section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Work from "@/components/landing/Work.astro";
 import Intro from "@/components/landing/Intro.astro";
 import Services from "@/components/landing/Services.astro";
 import Cta from "@/components/landing/Cta.astro";
+import AboutMe from "@/components/landing/AboutMe.astro";
 
 ---
 
@@ -16,4 +17,5 @@ import Cta from "@/components/landing/Cta.astro";
   <Intro />
   <Services />
   <Cta />
+  <AboutMe />
 </BaseLayout>
