--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -8,8 +8,9 @@
         <span
           class="text-white text-xs font-display inline-flex items-center md:px-8 md:text-center py-4 uppercase">Welcome to my site  </span>
         
+        <div>
         <a
-          href="https://github.com/deanbiscocho"
+          href="https://www.linkedin.com/in/deanbiscocho/"
           target="_blank"
           class="w-full bg-white duration-200 font-display hover:bg-black hover:text-white lg:ml-auto lg:w-auto px-6 py-4 sm:rounded-full text-black text-center text-xs uppercase"
           >Linkedin</a
@@ -24,6 +25,8 @@
           class="w-full bg-carrot duration-200 font-display hover:bg-blacktext-white lg:w-auto px-6 py-4 sm:rounded-full text-black hover:text-white text-center text-xs uppercase"
           >Send me an email</a
         >
+        </div>
+        
       </div>
     </div>
   </div>
