--- a/src/components/landing/AboutMe.astro
+++ b/src/components/landing/AboutMe.astro
@@ -6,194 +6,56 @@
       </p>
     </div>
     <div
-      class="text-white text-xs gap-3 gap-y-12 grid grid-cols-1 md:grid-cols-4 mx-auto p-8 sm:grid-cols-2 md:gap-y-0">
+      class="text-white text-xs gap-3 gap-y-12 grid grid-cols-1 md:grid-cols-3 mx-auto p-8 sm:grid-cols-2 md:gap-y-0">
       <div>
         <div>
+          <img
+                alt="work"
+                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
+                src="/work/5.png"
+              />
           <span class="text-white font-display text-xl"
-            >Custom Development:</span
+            >Filipino Cooking:</span
           >
         </div>
         <p class="mt-3 text-eagle">
-          Specializing in bespoke software solutions, I transform your unique ideas into functional and innovative applications, ensuring they align perfectly with your business needs and technological aspirations.
+          I love learning filipino recipes, especially from my family. The lumpia above was made by me using my mom's recipe. 
+        </p>
+        
+      </div>
+      <div>
+        <div>
+          <img
+                alt="work"
+                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
+                src="/work/6.png"
+              />
+          <span class="text-white font-display text-xl"
+            >Beau:</span
+          >
+        </div>
+        <p class="mt-3 text-eagle">
+          This is my son. He often makes appearances in Zoom meetings. He can be found sitting on my lap while I code.
         </p>
       </div>
       <div>
         <div>
+          <img
+                alt="work"
+                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
+                src="/work/7.png"
+              />
           <span class="text-white font-display text-xl"
-            >Content Strategy & Technical Writing:</span
+            >Holiday Crafts:</span
           >
         </div>
         <p class="mt-3 text-eagle">
-          Leveraging my expertise in technical communication, I develop clear, impactful content strategies and write authoritative technical documents that effectively convey complex information to your target audience.
+          Making holidays special with some arts & crafts is a MUST. I want to commemorate each day with a fun activity.
         </p>
       </div>
       <div>
-        <div>
-          <span class="text-white font-display text-xl"
-            >Consultation & Strategy Planning:</span
-          >
-        </div>
-        <p class="mt-3 text-eagle">
-          Offering expert consultation, I guide startups and tech companies through strategic planning, helping them navigate the tech landscape to achieve optimal growth and success.
-        </p>
-      </div>
-      <div>
-        <div>
-          <span class="text-white font-display text-xl"
-            >User Experience Design:</span
-          >
-        </div>
-        <p class="mt-3 text-eagle">
-          Focused on creating intuitive and engaging digital experiences, I design user interfaces that are not only visually appealing but also user-friendly, enhancing overall customer satisfaction and interaction with your product.
-        </p>
-      </div>
+        
     </div>
   </div>
 </section>
-<!-- Project Gallery -->
-<section class="border-b border-white/20  bg-accent-500">
-  <div
-    class="mx-auto max-w-7xl border-white/20  border-x"
-    x-data="{ init() {
-            new Splide(this.$refs.splide, {
 
-                perPage: 4,
-                gap: '0rem',
-                arrows: false,
-                breakpoints: {
-                    640: {
-                        perPage: 1,
-                    },
-                },
-
-            }).mount()
-        },
-    }">
-    <section
-      class="splide is-initialized splide--slide splide--ltr splide--draggable is-active"
-      aria-label="Splide/Alpine.js"
-      x-ref="splide"
-      id="splide01"
-      aria-roledescription="carousel">
-      
-      <div
-        class="h-full splide__track splide__track--slide splide__track--ltr splide__track--draggable"
-        id="splide01-track"
-        style="padding-left: 0px; padding-right: 0px;"
-        aria-live="polite"
-        aria-atomic="true"
-        aria-busy="false">
-        <ul
-          class="splide__list"
-          id="splide01-list"
-          role="presentation"
-          style="transform: translateX(-2040px);">
-          <a href="https://www.query-iq.com/" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide is-prev"
-            id="splide01-slide03"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="3 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            
-              <img
-                alt="work"
-                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-                src="/work/1.png"
-              />
-            
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Query IQ</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Database Health Monitoring</span>
-            </div>
-          </li>
-          </a>
-          <a href="https://www.youtube.com/@Codesmith/shorts" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide01"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="1 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/2.png"
-            />
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Codesmith</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Technical Video Content</span>
-            </div>
-          </li>
-          </a>
-          <a href="https://medium.com/@deanbiscocho" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide is-prev"
-            id="splide01-slide03"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="3 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/3.png"
-            />
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Medium</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Technical Writing Content</span>
-            </div>
-          </li>
-          </a>
-          <a href="https://vaynercommerce.com/" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide is-prev"
-            id="splide01-slide03"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="3 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/4.png"
-            />
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">VaynerCommerce</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Content Strategy and Paid Media</span>
-            </div>
-          </li>
-          </a>
-
-          
-
-          
-
-          
-        </ul>
-      </div>
-    </section>
-  </div>
-</section>
