--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -10,150 +10,84 @@
   </div>
 </section>
 
-<!-- Project Gallery -->
-<section class="border-b border-white/20  bg-accent-500">
-  <div
-    class="mx-auto max-w-7xl border-white/20  border-x"
-    x-data="{ init() {
-            new Splide(this.$refs.splide, {
-
-                perPage: 4,
-                gap: '0rem',
-                arrows: false,
-                breakpoints: {
-                    640: {
-                        perPage: 1,
-                    },
-                },
-
-            }).mount()
-        },
-    }">
-    <section
-      class="splide is-initialized splide--slide splide--ltr splide--draggable is-active"
-      aria-label="Splide/Alpine.js"
-      x-ref="splide"
-      id="splide01"
-      aria-roledescription="carousel">
-      
-      <div
-        class="h-full splide__track splide__track--slide splide__track--ltr splide__track--draggable"
-        id="splide01-track"
-        style="padding-left: 0px; padding-right: 0px;"
-        aria-live="polite"
-        aria-atomic="true"
-        aria-busy="false">
-        <ul
-          class="splide__list"
-          id="splide01-list"
-          role="presentation"
-          style="transform: translateX(-2040px);">
+<section class="border-white/20  border-b">
+  <div class="mx-auto border-white/20  border-x max-w-7xl">
+    
+    <div
+      class="text-white text-xs gap-3 gap-y-12 grid grid-cols-1 md:grid-cols-4 mx-auto p-8 sm:grid-cols-2 md:gap-y-0">
+      <div>
+        <div>
           <a href="https://www.query-iq.com/" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide is-prev"
-            id="splide01-slide03"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="3 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            
-              <img
+          <img
                 alt="work"
                 class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
                 src="/work/1.png"
               />
-            
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Query IQ</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Database Health Monitoring</span>
-            </div>
-          </li>
-          </a>
-          <a href="https://www.youtube.com/@Codesmith/shorts" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide"
-            id="splide01-slide01"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="1 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/2.png"
-            />
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Codesmith</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Technical Video Content</span>
-            </div>
-          </li>
-          </a>
-          <a href="https://medium.com/@deanbiscocho" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide is-prev"
-            id="splide01-slide03"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="3 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/3.png"
-            />
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">Medium</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Technical Writing Content</span>
-            </div>
-          </li>
-          </a>
-          <a href="https://vaynercommerce.com/" target="_blank">
-          <li
-            class="flex justify-center flex-col splide__slide is-prev"
-            id="splide01-slide03"
-            role="tabpanel"
-            aria-roledescription="slide"
-            aria-label="3 of 4"
-            style="margin-right: 0.5rem; width: calc(((100% + 0.5rem) / 1) - 0.5rem);"
-            aria-hidden="true">
-            <img
-              alt="work"
-              class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
-              src="/work/4.png"
-            />
-            <div
-              class="text-white text-lg order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-semibold">VaynerCommerce</span>
-            </div>
-            <div
-              class="text-eagle text-xs order-first p-3 text-center lg:border-r lg:border-white/20 ">
-              <span class="block font-regular">Content Strategy and Paid Media</span>
-            </div>
-          </li>
-          </a>
-
-          
-
-          
-
-          
-        </ul>
+          <span class="text-white font-display text-xl"
+            >QUERY IQ</span
+          >
+        </div>
+        <p class="mt-3 text-eagle">
+          I am a Software Engineer for Query IQ, an open-source database health monitoring product. 
+        </p>
+        </a>
+        
       </div>
-    </section>
+      <div>
+        <div>
+          <a href="https://www.youtube.com/@Codesmith/shorts" target="_blank">
+          <img
+                alt="work"
+                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
+                src="/work/2.png"
+              />
+          <span class="text-white font-display text-xl"
+            >CODESMITH</span
+          >
+        </div>
+        <p class="mt-3 text-eagle">
+          I make Technical Video Content for Codesmith's social media platforms.
+        </p>
+        </a>
+      </div>
+      <div>
+        <div>
+          <a href="https://medium.com/@deanbiscocho" target="_blank">
+          <img
+                alt="work"
+                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
+                src="/work/3.png"
+              />
+          <span class="text-white font-display text-xl"
+            >MEDIUM</span
+          >
+        </div>
+        <p class="mt-3 text-eagle">
+          I write technical content on Medium to contribute to the developer community.
+        </p>
+        </a>
+      </div>
+      <div>
+        <div>
+          <a href="https://vaynercommerce.com/" target="_blank">
+          <img
+                alt="work"
+                class="w-full object-cover object-center bg-white border-t border-black lg:border-r"
+                src="/work/4.png"
+              />
+          <span class="text-white font-display text-xl"
+            >VAYNERCOMMERCE</span
+          >
+        </div>
+        <p class="mt-3 text-eagle">
+          I worked in Content Strategy and Paid Media for VaynerCommerce, a major marketing agency run by Gary Vaynerchuk.
+        </p>
+        </a>
+      </div>
+      <div>
+        
+    </div>
   </div>
 </section>
+
+
